// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CxDropdownItemPlain customize 1`] = `
<div>
  <div
    class="dropdown-item-text bazinga"
  >
    Test
  </div>
</div>
`;

exports[`loads and displays CxDropdownItemPlain component 1`] = `
<div>
  <span
    class="dropdown-item-text"
  >
    Test
  </span>
</div>
`;
